--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -10,5 +10,11 @@ html(lang="en")
         header
             h1 Noom
         main
-            h2 Welcome to Noom
+            form#nick
+                input(type="text", placeholer="choos a nickname", required)
+                button Save 
+            ul
+            form#message
+                input(type="text", placeholer="write a msg", required)
+                button send 
         script(src="/public/js/index.js")
