--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -12,14 +12,15 @@ html(lang="en")
         main
             div#welcome
                 form
-                    input(placeholder="room name", required, type="text")
+                    input#roomName(placeholder="room name", required, type="text")
+                    input#name(placeholder="Nickname", required, type="text")
                     button Enter Room
             div#room
                 h3
                 ul
                 form#name
-                    input(placeholder="Input your nickname", required, type="text")
-                    button Save
+                    input(placeholder="change your nickname", required, type="text")
+                    button Change
                 form#msg
                     input(placeholder="message name", required, type="text")
                     button Send
